Fix superfluous 1px separator causing mobile menu to overflow

--- a/src/_assets/css/blocks/_header.css
+++ b/src/_assets/css/blocks/_header.css
@@ -365,7 +365,8 @@ html[data-js='false'] .header-themepicker {
 		justify-content: flex-end;
 		inline-size: 100%;
 
-		&:not(:last-child) {
+		/* Add a separator between each group, except the last (the last group is followed by a <dialog>, hence :last-of-type) */
+		&:not(:last-of-type) {
 			&::before {
 				content: '';
 
